--- a/resources/js/Style/Guest.css
+++ b/resources/js/Style/Guest.css
@@ -103,11 +103,57 @@
 .navbar.scrolled {
   position: fixed;
   background-color: rgba(4, 85, 207, 0.85); /* bleu semi-transparent */
-  backdrop-filter: blur(10px);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  /* backdrop-filter: blur(10px); */
+  /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2); */
 }
+.nav-links2{
+  display: none;
+}
+.navbar2{
+  display: none;
+}
+
 
 @media screen and (min-width: 320px) and (max-width: 768px) {
     
+    .nav-links{
+      display: none;
+    }
+    .nav-links2{
+      display: block;
+    }
+    .nav-links2 li{
+      font-size: 35px;
+      justify-content: center;
+      align-items: center;
+      align-content: center;
+      display: flex;
+    }
+    .navbar2{
+      display: block;
+    }
+    .menu2 {
+      width: 100%;
+      position: fixed;         /* Fixé à l'écran */
+      top: 90px;               /* Décale juste en dessous de la navbar */
+      left: 0;
+      background-color: rgba(4, 85, 207, 0.85);
+      display: flex;
+      flex-direction: column;  /* Chaque élément sur une ligne */
+      align-items: center;
+      z-index: 90;
+      padding: 10px 0;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+    
+    .menu-item {
+      color: rgb(255, 255, 255);
+      padding: 12px 0;
+      text-align: center;
+      cursor:pointer;
+      width: 100%;
+      font-weight: 600;
+      /* border-bottom: 1px solid #ccc; */
+    }
     
 }
